# berlin_flat_finder

./: .gitignore  Flat finder.md  POC_Prompts.md  POC_Scope.md  README.md
backend/: .env.example  pyproject.toml
backend/src/: config.py
backend/src/db/: supabase_client.py
backend/src/monitoring/: change_detector.py  global_monitor.py  html_fetcher.py  listing_parser.py  session_manager.py
frontend/: next-env.d.ts  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
infra/: SUPABASE_SETUP.md
